Fixed alignment issues

--- a/styles.css
+++ b/styles.css
@@ -174,27 +174,30 @@ body {
   display: block;
   color: white;
   position: absolute;
-  left: 15%;
+  left: 11.2%;
   top: 77.7%;
   font-size: 110%;
+  text-align: center;
 }
 
 #tal2 {
   display: block;
   color: white;
   position: absolute;
-  left: 45%;
+  left: 41.2%;
   top: 77.7%;
   font-size: 110%;
+  text-align: center;
 }
 
 #tal3 {
   display: block;
   color: white;
   position: absolute;
-  left: 73%;
+  left: 71.5%;
   top: 77.7%;
   font-size: 110%;
+  text-align: center;
 }
 
 td {
@@ -268,6 +271,7 @@ td {
   font-size: 120%;
   color: white;
 }
+
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
